2008-04-21  Ben Van Mechelen  <me@benvm.be>

	* garmon/prefs.py:
	    rename Preference to _Preference 


2008-04-21  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	    Specify the portname in obd_device.open() when resetting 
	* garmon/obd_device.py:
	    Add error checking in open method
	* plugins/dashboard/dashboard.py:
	    Some visual clean-ups


2008-04-21  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.glade:
	* plugins/dashboard/dashboard.py:
	    Add the plugin prefs including a notebook page to PrefsManager


2008-04-19  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/prefs.py:
	    Remove obsolete code from PluginManager and GarmonApp


2008-04-18  Ben Van Mechelen  <me@benvm.be>

	* data/prefs.glade:
	* garmon/garmon_app.py:
	* garmon/plugin_manager.py:
	* garmon/prefs.py:
	* garmon/widgets.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.py:
	    plugins now using new PreferencesManager interface
	

2008-04-18  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:  
	* garmon/plugin_manager.py:
	    Use the new PreferencesManager
	    
	* garmon/prefs.py:
	    Get rid of gclient in PrefsDialog


2008-04-18  Ben Van Mechelen  <me@benvm.be>

	* data/prefs.glade:
	* garmon/garmon_app.py:
	* garmon/prefs.py:
	    We now have a PreferencesManager class. New prefs can 
	    be registered. These prefs can then be read. It is also possible
	    to connect to a notify signal when a value is changed.

2008-04-17  Ben Van Mechelen  <me@benvm.be>

	* garmon/__init__.py:
	* garmon/garmon_app.py:
	* garmon/prefs.py:
	    Created a Preferences class from which the prefs can be obtained
	* garmon/property_object.py:
	    fixed a typo
	* garmon/widgets.py:
	* plugins/live_data/live_data.py:
	    MilWidget updates itself according to color preferences

2008-04-17  Ben Van Mechelen  <me@benvm.be>

	* garmon/__init__.py:
	* garmon/prefs.py:
	    replace print with debug()
